@@ -14,6 +14,9 @@ Release 0.11.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-1385: Remove locking on RMContext. (Contributed by navis, 
+    Committed by jihoon)
+
     TAJO-1499: Check the bind status when EvalNode::eval() is called. (jihoon)
 
     TAJO-1400: Add TajoStatement::setMaxRows method support.
